Products api and documentation
