# app/Http/Controllers/Api/CatalogController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers\Api;
 use App\Http\Controllers\Controller;
 use App\Http\Resources\CatalogResource;
 use App\Http\Resources\CategoryResource;
+use App\Http\Resources\ProductResource;
 use App\Http\Resources\SubCategoryResource;
 use App\Services\CatalogService;
 use Illuminate\Http\Request;
@@ -79,5 +80,26 @@ class CatalogController extends Controller
     {
         $subCategories = $this->catalogService->subCategories();
         return SubCategoryResource::collection($subCategories);
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/api/top-products",
+     *     summary="Retrieve top products",
+     *     tags={"Products"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="List of all top products"
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal server error"
+     *     )
+     * )
+     */
+    public function products()
+    {
+        $products = $this->catalogService->products();
+        return ProductResource::collection($products);
     }
 }
