# routes/api.php
@@ -6,3 +6,4 @@ use Illuminate\Support\Facades\Route;
 Route::get('/catalogs', [CatalogController::class, 'catalogs']);
 Route::get('/categories', [CatalogController::class, 'categories']);
 Route::get('/sub-categories', [CatalogController::class, 'subCategories']);
+Route::get('/top-products', [CatalogController::class, 'products']);
